# hive_experiment

./: README.md  data_preprocessing_and_upload.py  pyproject.toml  utils.py
Hive/: cab_hive_experiment.yml  docker-compose.yml
Hive/hive_stage/table_declaration/: data_travels_table.hql  enriched_cab.hql  enriched_cab_view.hql  travels_view.hql
