[tool.poetry]
name = "hive_experiment"
version = "0.1.0"
description = "Hadoop (one node) creation and an on-top Hive to read data"
authors = ["Antonello Aita <antonello.aita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
folium = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
